docs/envoy/v1.34.14/_sources/api-v3/extensions/common/aws/v3/credential_provider.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/common/aws/v3/credential_provider.proto:

AWS common configuration (proto)
================================






.. _envoy_v3_api_msg_extensions.common.aws.v3.AwsCredentialProvider:

extensions.common.aws.v3.AwsCredentialProvider
----------------------------------------------


:repo:`[extensions.common.aws.v3.AwsCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L21>`

Configuration for AWS credential provider. This is optional and the credentials are normally
retrieved from the environment or AWS configuration files by following the default credential
provider chain. However, this configuration can be used to override the default behavior.



.. code-block:: json
  :force:

  {
    "assume_role_with_web_identity_provider": {...},
    "inline_credential": {...},
    "credentials_file_provider": {...},
    "custom_credential_provider_chain": ...
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.assume_role_with_web_identity_provider:


assume_role_with_web_identity_provider
  (:ref:`extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider>`) The option to use `AssumeRoleWithWebIdentity <https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRoleWithWebIdentity.html>`_.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.inline_credential:


inline_credential
  (:ref:`extensions.common.aws.v3.InlineCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.InlineCredentialProvider>`) The option to use an inline credential. If inline credential is provided, no chain will be created and only the inline credential will be used.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.credentials_file_provider:


credentials_file_provider
  (:ref:`extensions.common.aws.v3.CredentialsFileCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.CredentialsFileCredentialProvider>`) The option to specify parameters for credential retrieval from an envoy data source, such as a file in AWS credential format.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.custom_credential_provider_chain:


custom_credential_provider_chain
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Create a custom credential provider chain instead of the default credential provider chain.
  If set to TRUE, the credential provider chain that is created contains only those set in this credential provider message.
  If set to FALSE, the settings provided here will act as modifiers to the default credential provider chain.
  Defaults to FALSE.

  This has no effect if inline_credential is provided.



.. _envoy_v3_api_msg_extensions.common.aws.v3.InlineCredentialProvider:

extensions.common.aws.v3.InlineCredentialProvider
-------------------------------------------------


:repo:`[extensions.common.aws.v3.InlineCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L42>`

Configuration to use an inline AWS credential. This is an equivalent to setting the well-known
environment variables ``AWS_ACCESS_KEY_ID``, ``AWS_SECRET_ACCESS_KEY``, and the optional ``AWS_SESSION_TOKEN``.



.. code-block:: json
  :force:

  {
    "access_key_id": ...,
    "secret_access_key": ...,
    "session_token": ...
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.InlineCredentialProvider.access_key_id:


access_key_id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The AWS access key ID.


.. _envoy_v3_api_field_extensions.common.aws.v3.InlineCredentialProvider.secret_access_key:


secret_access_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The AWS secret access key.


.. _envoy_v3_api_field_extensions.common.aws.v3.InlineCredentialProvider.session_token:


session_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The AWS session token. This is optional.



.. _envoy_v3_api_msg_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider:

extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider
--------------------------------------------------------------------


:repo:`[extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L56>`

Configuration to use `AssumeRoleWithWebIdentity <https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRoleWithWebIdentity.html>`_
to retrieve AWS credentials.



.. code-block:: json
  :force:

  {
    "web_identity_token_data_source": {...},
    "role_arn": ...,
    "role_session_name": ...
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider.web_identity_token_data_source:


web_identity_token_data_source
  (:ref:`config.core.v3.DataSource <envoy_v3_api_msg_config.core.v3.DataSource>`) Data source for a web identity token that is provided by the identity provider to assume the role.
  When using this data source, even if a ``watched_directory`` is provided, the token file will only be re-read when the credentials
  returned from AssumeRoleWithWebIdentity expire.


.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider.role_arn:


role_arn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The ARN of the role to assume.


.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider.role_session_name:


role_session_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional role session name to use in AssumeRoleWithWebIdentity API call.



.. _envoy_v3_api_msg_extensions.common.aws.v3.CredentialsFileCredentialProvider:

extensions.common.aws.v3.CredentialsFileCredentialProvider
----------------------------------------------------------


:repo:`[extensions.common.aws.v3.CredentialsFileCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L70>`




.. code-block:: json
  :force:

  {
    "credentials_data_source": {...},
    "profile": ...
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.CredentialsFileCredentialProvider.credentials_data_source:


credentials_data_source
  (:ref:`config.core.v3.DataSource <envoy_v3_api_msg_config.core.v3.DataSource>`) Data source from which to retrieve AWS credentials
  When using this data source, if a ``watched_directory`` is provided, the credential file will be re-read when a file move is detected.
  See :ref:`watched_directory <envoy_v3_api_msg_config.core.v3.DataSource>` for more information about the ``watched_directory`` field.


.. _envoy_v3_api_field_extensions.common.aws.v3.CredentialsFileCredentialProvider.profile:


profile
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The profile within the credentials_file data source. If not provided, the default profile will be used.


