docs/envoy/v1.35.10/_sources/api-v3/extensions/common/aws/v3/credential_provider.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/common/aws/v3/credential_provider.proto:

AWS common configuration (proto)
================================






.. _envoy_v3_api_msg_extensions.common.aws.v3.AwsCredentialProvider:

extensions.common.aws.v3.AwsCredentialProvider
----------------------------------------------


:repo:`[extensions.common.aws.v3.AwsCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L24>`

Configuration for AWS credential provider. This is optional and the credentials are normally
retrieved from the environment or AWS configuration files by following the default credential
provider chain. However, this configuration can be used to override the default behavior.



.. code-block:: json
  :force:

  {
    "assume_role_with_web_identity_provider": {...},
    "inline_credential": {...},
    "credentials_file_provider": {...},
    "custom_credential_provider_chain": ...,
    "iam_roles_anywhere_credential_provider": {...},
    "config_credential_provider": {...},
    "container_credential_provider": {...},
    "environment_credential_provider": {...},
    "instance_profile_credential_provider": {...},
    "assume_role_credential_provider": {...}
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.assume_role_with_web_identity_provider:


assume_role_with_web_identity_provider
  (:ref:`extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider>`) The option to use `AssumeRoleWithWebIdentity <https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRoleWithWebIdentity.html>`_.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.inline_credential:


inline_credential
  (:ref:`extensions.common.aws.v3.InlineCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.InlineCredentialProvider>`) The option to use an inline credential. If inline credential is provided, no chain will be created and only the inline credential will be used.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.credentials_file_provider:


credentials_file_provider
  (:ref:`extensions.common.aws.v3.CredentialsFileCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.CredentialsFileCredentialProvider>`) The option to specify parameters for credential retrieval from an envoy data source, such as a file in AWS credential format.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.custom_credential_provider_chain:


custom_credential_provider_chain
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Create a custom credential provider chain instead of the default credential provider chain.
  If set to TRUE, the credential provider chain that is created contains only those set in this credential provider message.
  If set to FALSE, the settings provided here will act as modifiers to the default credential provider chain.
  Defaults to FALSE.

  This has no effect if inline_credential is provided.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.iam_roles_anywhere_credential_provider:


iam_roles_anywhere_credential_provider
  (:ref:`extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider>`) The option to use `IAM Roles Anywhere <https://docs.aws.amazon.com/rolesanywhere/latest/userguide/introduction.html>`_.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.config_credential_provider:


config_credential_provider
  (:ref:`extensions.common.aws.v3.ConfigCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.ConfigCredentialProvider>`) The option to use credentials sourced from standard `AWS configuration files <https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-files.html>`_.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.container_credential_provider:


container_credential_provider
  (:ref:`extensions.common.aws.v3.ContainerCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.ContainerCredentialProvider>`) The option to use credentials sourced from `container environment variables <https://docs.aws.amazon.com/sdkref/latest/guide/feature-container-credentials.html>`_.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.environment_credential_provider:


environment_credential_provider
  (:ref:`extensions.common.aws.v3.EnvironmentCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.EnvironmentCredentialProvider>`) The option to use credentials sourced from `environment variables <https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-envvars.html>`_.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.instance_profile_credential_provider:


instance_profile_credential_provider
  (:ref:`extensions.common.aws.v3.InstanceProfileCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.InstanceProfileCredentialProvider>`) The option to use credentials sourced from an EC2 `Instance Profile <https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/iam-roles-for-amazon-ec2.html>`_.


.. _envoy_v3_api_field_extensions.common.aws.v3.AwsCredentialProvider.assume_role_credential_provider:


assume_role_credential_provider
  (:ref:`extensions.common.aws.v3.AssumeRoleCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.AssumeRoleCredentialProvider>`) The option to use `STS:AssumeRole aka Role Chaining <https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html>`_.



.. _envoy_v3_api_msg_extensions.common.aws.v3.InlineCredentialProvider:

extensions.common.aws.v3.InlineCredentialProvider
-------------------------------------------------


:repo:`[extensions.common.aws.v3.InlineCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L63>`

Configuration to use an inline AWS credential. This is an equivalent to setting the well-known
environment variables ``AWS_ACCESS_KEY_ID``, ``AWS_SECRET_ACCESS_KEY``, and the optional ``AWS_SESSION_TOKEN``.



.. code-block:: json
  :force:

  {
    "access_key_id": ...,
    "secret_access_key": ...,
    "session_token": ...
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.InlineCredentialProvider.access_key_id:


access_key_id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The AWS access key ID.


.. _envoy_v3_api_field_extensions.common.aws.v3.InlineCredentialProvider.secret_access_key:


secret_access_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The AWS secret access key.


.. _envoy_v3_api_field_extensions.common.aws.v3.InlineCredentialProvider.session_token:


session_token
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The AWS session token. This is optional.



.. _envoy_v3_api_msg_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider:

extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider
--------------------------------------------------------------------


:repo:`[extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L77>`

Configuration to use `AssumeRoleWithWebIdentity <https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRoleWithWebIdentity.html>`_
to retrieve AWS credentials.



.. code-block:: json
  :force:

  {
    "web_identity_token_data_source": {...},
    "role_arn": ...,
    "role_session_name": ...
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider.web_identity_token_data_source:


web_identity_token_data_source
  (:ref:`config.core.v3.DataSource <envoy_v3_api_msg_config.core.v3.DataSource>`) Data source for a web identity token that is provided by the identity provider to assume the role.
  When using this data source, even if a ``watched_directory`` is provided, the token file will only be re-read when the credentials
  returned from AssumeRoleWithWebIdentity expire.


.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider.role_arn:


role_arn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The ARN of the role to assume.


.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleWithWebIdentityCredentialProvider.role_session_name:


role_session_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional role session name to use in AssumeRoleWithWebIdentity API call.



.. _envoy_v3_api_msg_extensions.common.aws.v3.CredentialsFileCredentialProvider:

extensions.common.aws.v3.CredentialsFileCredentialProvider
----------------------------------------------------------


:repo:`[extensions.common.aws.v3.CredentialsFileCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L91>`




.. code-block:: json
  :force:

  {
    "credentials_data_source": {...},
    "profile": ...
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.CredentialsFileCredentialProvider.credentials_data_source:


credentials_data_source
  (:ref:`config.core.v3.DataSource <envoy_v3_api_msg_config.core.v3.DataSource>`) Data source from which to retrieve AWS credentials
  When using this data source, if a ``watched_directory`` is provided, the credential file will be re-read when a file move is detected.
  See :ref:`watched_directory <envoy_v3_api_msg_config.core.v3.DataSource>` for more information about the ``watched_directory`` field.


.. _envoy_v3_api_field_extensions.common.aws.v3.CredentialsFileCredentialProvider.profile:


profile
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The profile within the credentials_file data source. If not provided, the default profile will be used.



.. _envoy_v3_api_msg_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider:

extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider
-----------------------------------------------------------


:repo:`[extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L104>`

Configuration to use `IAM Roles Anywhere <https://docs.aws.amazon.com/rolesanywhere/latest/userguide/introduction.html>`_
to retrieve AWS credentials.



.. code-block:: json
  :force:

  {
    "role_arn": ...,
    "certificate": {...},
    "certificate_chain": {...},
    "private_key": {...},
    "trust_anchor_arn": ...,
    "profile_arn": ...,
    "role_session_name": ...,
    "session_duration": {...}
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider.role_arn:


role_arn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The ARN of the role to assume via the IAM Roles Anywhere sessions API. See `Configure Roles <https://docs.aws.amazon.com/rolesanywhere/latest/userguide/getting-started.html#getting-started-step2>`_ for more details.


.. _envoy_v3_api_field_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider.certificate:


certificate
  (:ref:`config.core.v3.DataSource <envoy_v3_api_msg_config.core.v3.DataSource>`, *REQUIRED*) The certificate used for authenticating to the IAM Roles Anywhere service.
  This certificate must match one configured in the IAM Roles Anywhere profile. See `Configure Roles <https://docs.aws.amazon.com/rolesanywhere/latest/userguide/getting-started.html#getting-started-step2>`_ for more details.


.. _envoy_v3_api_field_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider.certificate_chain:


certificate_chain
  (:ref:`config.core.v3.DataSource <envoy_v3_api_msg_config.core.v3.DataSource>`) The optional certificate chain, required when you are using a subordinate certificate authority for certificate issuance.
  A certificate chain can contain a maximum of 5 elements, see `The IAM Roles Anywhere authentication process <https://docs.aws.amazon.com/rolesanywhere/latest/userguide/authentication.html>`_ for more details.


.. _envoy_v3_api_field_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider.private_key:


private_key
  (:ref:`config.core.v3.DataSource <envoy_v3_api_msg_config.core.v3.DataSource>`, *REQUIRED*) The TLS private key matching the certificate provided.


.. _envoy_v3_api_field_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider.trust_anchor_arn:


trust_anchor_arn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The arn of the IAM Roles Anywhere trust anchor configured in your AWS account. A trust anchor in IAM Roles anywhere establishes
  trust between your certificate authority (CA) and AWS. See `Establish trust <https://docs.aws.amazon.com/rolesanywhere/latest/userguide/getting-started.html#getting-started-step1>`_ for more details.


.. _envoy_v3_api_field_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider.profile_arn:


profile_arn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The IAM Roles Anywhere profile ARN configured in your AWS account.


.. _envoy_v3_api_field_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider.role_session_name:


role_session_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional role session name, used when identifying the role in subsequent AWS API calls.


.. _envoy_v3_api_field_extensions.common.aws.v3.IAMRolesAnywhereCredentialProvider.session_duration:


session_duration
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) An optional session duration, used when calculating the maximum time before vended credentials expire. This value cannot exceed the value configured
  in the IAM Roles Anywhere profile and the resultant session duration is calculate by the formula `here <https://docs.aws.amazon.com/rolesanywhere/latest/userguide/authentication-create-session.html#credentials-object>`_.
  If no session duration is provided here, the session duration is sourced from the IAM Roles Anywhere profile.



.. _envoy_v3_api_msg_extensions.common.aws.v3.ConfigCredentialProvider:

extensions.common.aws.v3.ConfigCredentialProvider
-------------------------------------------------


:repo:`[extensions.common.aws.v3.ConfigCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L141>`

The Config Credential Provider has no configurable parameters, but listing it in a custom credential provider chain will enable this
credential provider.





.. _envoy_v3_api_msg_extensions.common.aws.v3.ContainerCredentialProvider:

extensions.common.aws.v3.ContainerCredentialProvider
----------------------------------------------------


:repo:`[extensions.common.aws.v3.ContainerCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L146>`

The Container Credential Provider has no configurable parameters, but listing it in a custom credential provider chain will enable this
credential provider.





.. _envoy_v3_api_msg_extensions.common.aws.v3.EnvironmentCredentialProvider:

extensions.common.aws.v3.EnvironmentCredentialProvider
------------------------------------------------------


:repo:`[extensions.common.aws.v3.EnvironmentCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L151>`

The Environment Credential Provider has no configurable parameters, but listing it in a custom credential provider chain will enable this
credential provider.





.. _envoy_v3_api_msg_extensions.common.aws.v3.InstanceProfileCredentialProvider:

extensions.common.aws.v3.InstanceProfileCredentialProvider
----------------------------------------------------------


:repo:`[extensions.common.aws.v3.InstanceProfileCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L156>`

The Instance Profile Credential Provider has no configurable parameters, but listing it in a custom credential provider chain will enable this
credential provider.





.. _envoy_v3_api_msg_extensions.common.aws.v3.AssumeRoleCredentialProvider:

extensions.common.aws.v3.AssumeRoleCredentialProvider
-----------------------------------------------------


:repo:`[extensions.common.aws.v3.AssumeRoleCredentialProvider proto] <api/envoy/extensions/common/aws/v3/credential_provider.proto#L161>`

Configuration to use `AssumeRole <https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html>`_ for retrieving new credentials, via role chaining.



.. code-block:: json
  :force:

  {
    "role_arn": ...,
    "role_session_name": ...,
    "external_id": ...,
    "session_duration": {...},
    "credential_provider": {...}
  }

.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleCredentialProvider.role_arn:


role_arn
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The ARN of the role to assume.


.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleCredentialProvider.role_session_name:


role_session_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional string value to use as the role session name


.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleCredentialProvider.external_id:


external_id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional string value to use as the externalId


.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleCredentialProvider.session_duration:


session_duration
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) An optional duration, in seconds, of the role session. Minimum role duration is 900s (5 minutes) and maximum is 43200s (12 hours).
  If the session duration is not provided, the default will be determined using the `table described here <https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_manage-assume.html>`_.


.. _envoy_v3_api_field_extensions.common.aws.v3.AssumeRoleCredentialProvider.credential_provider:


credential_provider
  (:ref:`extensions.common.aws.v3.AwsCredentialProvider <envoy_v3_api_msg_extensions.common.aws.v3.AwsCredentialProvider>`) The credential provider for signing the AssumeRole request. This is optional and if not set,
  it will be retrieved from the procedure described in :ref:`config_http_filters_aws_request_signing`.
  This list of credential providers cannot include an AssumeRole credential provider and if one is provided
  it will be ignored.


